add create new category feature
